<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textAlignment="center"
            android:text="@string/app_mascotas"
            android:textColor="@color/violeta_oscuro"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Descripcion_app"
            android:textSize="16sp"
            android:textColor="@color/violeta"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funciones_principales"
            android:textStyle="bold"
            android:textColor="@color/violeta_oscuro"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Descripcion_funciones"
            android:textColor="@color/violeta"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>